crates/test-ui/ui/nsobject_not_mutable.stderr
error[E0277]: the trait bound `Root: mutability::private::MutabilityIsMutable` is not satisfied
 --> ui/nsobject_not_mutable.rs
  |
  |     let mut_ptr = Id::as_mut_ptr(&mut obj);
  |                   -------------- ^^^^^^^^ the trait `mutability::private::MutabilityIsMutable` is not implemented for `Root`
  |                   |
  |                   required by a bound introduced by this call
  |
  = help: the following other types implement trait `mutability::private::MutabilityIsMutable`:
            Mutable
            MutableWithImmutableSuperclass<IS>
  = note: required for `NSObject` to implement `IsMutable`
note: required by a bound in `Id::<T>::as_mut_ptr`
 --> $WORKSPACE/crates/objc2/src/rc/id.rs
  |
  |     pub fn as_mut_ptr(this: &mut Self) -> *mut T
  |            ---------- required by a bound in this associated function
  |     where
  |         T: IsMutable,
  |            ^^^^^^^^^ required by this bound in `Id::<T>::as_mut_ptr`

error[E0277]: the trait bound `Root: mutability::private::MutabilityIsMutable` is not satisfied
 --> ui/nsobject_not_mutable.rs
  |
  |         let mut_ref = Id::autorelease_mut(obj, pool);
  |                       ------------------- ^^^ the trait `mutability::private::MutabilityIsMutable` is not implemented for `Root`
  |                       |
  |                       required by a bound introduced by this call
  |
  = help: the following other types implement trait `mutability::private::MutabilityIsMutable`:
            Mutable
            MutableWithImmutableSuperclass<IS>
  = note: required for `NSObject` to implement `IsMutable`
note: required by a bound in `Id::<T>::autorelease_mut`
 --> $WORKSPACE/crates/objc2/src/rc/id.rs
  |
  |     pub fn autorelease_mut<'p>(this: Self, pool: AutoreleasePool<'p>) -> &'p mut T
  |            --------------- required by a bound in this associated function
  |     where
  |         T: IsMutable,
  |            ^^^^^^^^^ required by this bound in `Id::<T>::autorelease_mut`
